--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Prerequisites
 *.d
 
@@ -31,9 +32,10 @@
 *.out
 *.app
 
-
-procedural-terrain\procedural-terrain.vcxproj.user
-procedural-terrain\procedural-terrain.vcxproj.filters
-procedural-terrain\procedural-terrain.vcxproj
-procedural-terrain\procedural-terrain.sln
-procedural-terrain\x64\Debug
+.vs
+procedural-terrain/x64
+.vscode
+procedural-terrain/procedural-terrain.vcxproj.user
+procedural-terrain/procedural-terrain.vcxproj.filters
+procedural-terrain/procedural-terrain.vcxproj
+procedural-terrain/procedural-terrain.sln
